[tool.poetry]
name = "markline"
version = "0.1.0"
description = "Convert Markup to Markdown with a transformation pipeline."
authors = ["Hugh Cameron <hescameron+githubprojects@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
pandoc = "^2.2"
furl = "^2.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
