[tool.poetry]
name = "markline"
version = "0.2.0"
description = "Convert Markup to Markdown with a transformation pipeline."
authors = ["Hugh Cameron <hescameron+githubprojects@gmail.com>"]
license = "MIT"
homepage = "https://github.com/hughcameron/markline"
repository = "https://github.com/hughcameron/markline"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
pandoc = "^2.2"
furl = "^2.1.3"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
